--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,22 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 1280px
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.root,
+#root,
+#docs-root {
+  --main1: #1635F4;
+  --main1-light: #5D6DFF;
+  --main2: #64E269;
+  --main2-light:#A7FF9A;
+  --sub: #E9ECF8;
+  --black-500: #121820;
+  --black-400: #242528;
+  --black-300: #5B5D6C;
+  --black-200: #5B5D6C;
+  --black-100: #A4ABBE;
+  --white: #FFFFFF;
+  --lead: #FF7F00;
+  --serve: #00A7FF;
+  --assist: #28AD1D;
 }
