--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   --main2: #64E269;
   --main2-light:#A7FF9A;
   --sub: #E9ECF8;
+  --gradation-bg: linear-gradient(180deg, #ffffff 10.21%, #dee3ff 52.4%, #8f9df2 100%);
   --black-500: #121820;
   --black-400: #242528;
   --black-300: #3D3F4E;
@@ -99,4 +100,30 @@
   justify-content: center;
   align-items: center;
   white-space: nowrap;
+}
+
+@keyframes slideLeft {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slideRight {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+.open {
+  animation: slideLeft 0.5s cubic-bezier(0.65, 0, 0.35, 1) 0s 1 normal forwards;
+}
+
+.close {
+  animation: slideRight 0.5s cubic-bezier(0.65, 0, 0.35, 1) 0s 1 normal forwards;
 }
