feat: fix path of img file

--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,37 @@
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 400;
-  src: url("/public/fonts/Pretendard-Regular.woff");
+  src: url("/fonts/Pretendard-Regular.woff");
 }
 @font-face {
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 500;
-  src: url("/public/fonts/Pretendard-Medium.woff");
+  src: url("/fonts/Pretendard-Medium.woff");
 }
 @font-face {
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 600;
-  src: url("/public/fonts/Pretendard-SemiBold.woff");
+  src: url("/fonts/Pretendard-SemiBold.woff");
 }
 @font-face {
   font-family: 'Pretendard';
   font-style: normal;
   font-weight: 700;
-  src: url("/public/fonts/Pretendard-Bold.woff");
+  src: url("/fonts/Pretendard-Bold.woff");
 }
 @font-face {
   font-family: 'www';
   font-style: normal;
   font-weight: 400;
-  src: url("/public/fonts/www.woff");
+  src: url("/fonts/www.woff");
 }
 @font-face {
   font-family: 'NotoSansKR';
   font-style: normal;
   font-weight: 700;
-  src: url("/public/fonts/NotoSansKR-Bold.woff");
+  src: url("/fonts/NotoSansKR-Bold.woff");
 }
 
 #root {
@@ -81,7 +81,7 @@
   transform: scale(0.8);
 }
 #marker__cafe {
-  background-image: url("/public/assets/cafe.png");
+  background-image: url("/assets/cafe.png");
   background-size: 263px 263px;
   background-position: 0 -35px;
   overflow: hidden;
